--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <app-root></app-root>
+  <hi-root>
+
+    Loading...
+
+  </hi-root>
 </body>
 </html>
